@@ -67,8 +67,7 @@ put the worker thread into the event loop, by evaluating the
 [cmd vwait] or other related Tcl commands, the worker thread 
 will not be in the idle state, hence the idle timer will not be 
 taken into account.
-Default value for this option is unspecified, hence, the Tcl interpreter
-of the worker thread will contain just the initial set of Tcl commands.
+Default value for this option is unspecified.
 
 [opt_def -initcmd [arg script]]
 Sets a Tcl script used to initialize new worker thread. This is usually
